# slouch_tracker

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMD_GUIDELINES.md  LICENSE  PORTING.md  README.md  THIRD-PARTY-NOTICES.md  eslint.config.js  index.svelte-app-harness.html  index.svelte-harness.html  index.svelte.html  package-lock.json  package.json  playwright.config.ts  specs.md  tsconfig.json  tsconfig.svelte.json  tsconfig.svelte.plumbing.json  vite.svelte-harness.config.ts  vite.svelte.config.ts  vitest.svelte.config.ts  vitest.svelte.setup.ts  wdio.conf.ts
src-tauri/: Cargo.toml  build.rs  model-format-v1.md  port-manifest.json  resource-lock.json  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/slouch-domain/: Cargo.toml
src-tauri/crates/slouch-domain/src/: archive.rs  bbox.rs  classification.rs  classifier.rs  dataset.rs  feature.rs  frame.rs  keypoint.rs  lib.rs  posture.rs  settings.rs  training.rs  validation.rs
src-tauri/crates/slouch-domain/src/ported/: detection.rs  guards.rs  index.rs  keypoint.rs  keypoint_indices.rs  mod.rs  schemas.rs  types.rs
src-tauri/crates/slouch-domain/src/ported/messages/: schemas.rs
src-tauri/crates/slouch-domain/src/ported/src/services/: types.rs
src-tauri/crates/slouch-domain/src/ported/src/utils/: feature_cloning.rs  mod.rs
src-tauri/crates/slouch-domain/src/ported/utils/: mod.rs  worker_messages.rs
src-tauri/crates/slouch-domain/tests/: classifier_metadata.rs  dto_number_semantics.rs  feature_metadata.rs  keypoint_parity.rs  ported.rs  posture_detection.rs  validation.rs
src-tauri/crates/slouch-domain/tests/ported/: detection_test.rs  guards_test.rs  schemas_test.rs
src-tauri/crates/slouch-domain/tests/ported/messages/: schemas_test.rs  validation_test.rs
src-tauri/crates/slouch-ml/: Cargo.toml
src-tauri/crates/slouch-ml/src/: lib.rs
src-tauri/crates/slouch-ml/src/ported/: adamw.rs  async_utils.rs  backend.rs  base_classifier.rs  binning.rs  body_frame.rs  classifier_factory.rs  classifier_registry.rs  config.rs  constants.rs  cross_validation.rs  engineered_features.rs  evaluation.rs  feature_extraction.rs  feature_extractor.rs  js_number.rs  keypoints_3d_features.rs  kmeans.rs  kmeans_logistic_classifier.rs  kmeans_prototype_classifier.rs  knn_classifier.rs  layer_norm.rs  ml_matrix_svd.rs  mlp_classifier.rs  mod.rs  model.rs  naive_bayes_classifier.rs  nlf_features.rs  pca.rs  pooling.rs  random_projection.rs  rtmdet_engineered_features.rs  rtmdet_features.rs  rtmpose_features.rs  sgd.rs  svm_classifier.rs  training_worker.rs  types.rs
src-tauri/crates/slouch-ml/src/ported/serialization/: mod.rs  serialization_helpers.rs
src-tauri/crates/slouch-ml/src/ported/utils/: class_weights.rs  debug_logging.rs  feature_validation.rs  mod.rs  tensor_cleanup.rs
src-tauri/crates/slouch-ml/tests/: compatibility_oracles.rs  gaussian_nb_parity.rs  model_format_security.rs  ported.rs  rtmpose_pooling_parity.rs
src-tauri/crates/slouch-ml/tests/ported/: adamw_test.rs  async_utils_test.rs  backend_test.rs  binning_test.rs  classifier_factory_test.rs  cross_validation_test.rs  engineered_features_test.rs  evaluation_test.rs  feature_extraction_test.rs  feature_extractor_test.rs  kmeans_logistic_classifier_test.rs  kmeans_test.rs  layer_norm_test.rs  mlp_classifier_test.rs  model_test.rs  naive_bayes_classifier_test.rs  pca_test.rs  random_projection_test.rs  rtmdet_engineered_features_test.rs  rtmdet_features_test.rs  rtmpose_features_test.rs  sgd_test.rs  training_worker_test.rs
src-tauri/crates/slouch-store/: Cargo.toml
src-tauri/crates/slouch-store/src/: lib.rs
src-tauri/crates/slouch-store/src/ported/: archive.rs  constants.rs  export.rs  feature_registry.rs  feature_reservoir.rs  import.rs  mod.rs  model_format.rs  operations.rs  storage.rs  types.rs
src-tauri/crates/slouch-store/tests/: archive_security.rs  compatibility_oracles.rs  native_archive.rs  native_model_format.rs  native_reservoir_archive.rs  native_settings.rs  native_settings_persistence_parity.rs  ported.rs  schema_security.rs
src-tauri/crates/slouch-store/tests/ported/: export_test.rs  feature_registry_test.rs  feature_reservoir_test.rs  import_test.rs  operations_test.rs  storage_test.rs
src-tauri/crates/slouch-vision/: Cargo.toml
src-tauri/crates/slouch-vision/src/: lib.rs  preprocessing.rs
src-tauri/crates/slouch-vision/src/ported/: create_inference_worker.rs  inference_worker.rs  mod.rs
src-tauri/crates/slouch-vision/src/ported/mocks/: create_inference_worker.rs  mod.rs
src-tauri/crates/slouch-vision/tests/: inference_parity.rs  native_crop_parity.rs  ported.rs
src-tauri/crates/slouch-vision/tests/ported/: inference_worker_buffer_transfer_test.rs  inference_worker_classifier_test.rs  inference_worker_initialization_test.rs  inference_worker_logging_test.rs  inference_worker_pipeline_test.rs  support.rs
src-tauri/fixtures/: compatibility-oracle-inventory-v1.json
src-tauri/fixtures/classifiers/: adamw-v1.json  gaussian-nb-v1.json  kmeans-logistic-v1.json  kmeans-prototype-v1.json  mlp-v1.json  svm-v1.json
src-tauri/fixtures/domain/: keypoint-v1.json
src-tauri/fixtures/math/: cross-validation-v1.json  kmeans-v1.json  pca-v1.json  random-projection-v1.json  rtmpose-pooling-v1.json
src-tauri/fixtures/models/: model-envelope-v1-binaries.json  model-envelope-v1.json
src-tauri/fixtures/store/: store-operations-v1.json
src-tauri/fixtures/vision/: vision-inference-v1.json
src-tauri/fixtures/vision/frames/: boundary-crop-silhouette.rgba  edge-clipped-silhouette.rgba  empty-landscape.rgba  multiple-silhouettes.rgba  noise-portrait.rgba  odd-gradient-boundary.rgba  single-silhouette-square.rgba
src-tauri/resources/models/: rtmdet-nano.onnx  rtmpose-m.onnx
src-tauri/schema/: archive-v1.sql  live-v1.sql
src-tauri/src/: actors.rs  api.rs  bindings.rs  errors.rs  inference_cache.rs  ipc_validation.rs  lib.rs  model_download.rs  native_runtime_resources_parity.rs  power.rs  tray.rs
src-tauri/tests/: actor_contracts.rs  bindings_freshness.rs  ipc_security.rs
(+319 files in other folders)
