[package]
name = "app"
version = "1.0.0"
description = "Slouch Tracker desktop application"
license = "MIT"
repository = "https://github.com/SSS135/slouch_tracker"
edition = "2021"
rust-version = "1.88"
default-run = "app"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.88"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ndarray = "=0.17.1"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "api-24", "directml"] }
rusqlite = { version = "=0.39.0", default-features = false, features = ["bundled"] }
rmp-serde = "1.3.0"
sha2 = "0.10.9"
nalgebra = "=0.34.1"
specta = { version = "=2.0.0-rc.25", features = ["derive", "serde_json"] }
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
zip = { version = "=4.6.1", default-features = false, features = ["deflate"] }
slouch-domain = { path = "crates/slouch-domain" }
slouch-ml = { path = "crates/slouch-ml" }
slouch-vision = { path = "crates/slouch-vision" }
slouch-store = { path = "crates/slouch-store" }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[features]
default = []
devbuild = [
    "tauri/devtools",
    "dep:tauri-plugin-wdio",
    "dep:tauri-plugin-wdio-webdriver",
]

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
log = "0.4"
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-log = "=2.9.0"
tauri-plugin-global-shortcut = "=2.3.1"
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-wdio = { version = "=1.2.0", optional = true }
tauri-plugin-wdio-webdriver = { version = "=1.2.0", optional = true }
slouch-domain = { workspace = true }
slouch-ml = { workspace = true }
slouch-vision = { workspace = true }
slouch-store = { workspace = true }
nokhwa = { version = "0.10.11", features = ["input-native", "output-threaded"] }
# Same 0.25 copy nokhwa already pulls in; we only add the `jpeg` feature so the
# non-MJPEG preview fallback in actors.rs can JPEG-encode decoded RGB frames.
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }
ort = { workspace = true }
# Preloads the DirectML runtime DLLs by absolute path before ort::init_from so
# onnxruntime.dll's delay-loaded DirectML.dll dependency resolves from the
# packaged resource dir (Windows does not search that dir on its own). See
# initialize_onnx_runtime in api.rs.
libloading = "0.8"
specta = { workspace = true }
specta-typescript = { workspace = true }
tauri-specta = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }

# App-level EcoQoS power management (src/power.rs). Pinned to the 0.62.2 copy
# already resolved transitively; only the two features that surface
# SetProcessInformation / SetPriorityClass and their types.
[target.'cfg(windows)'.dependencies]
windows = { version = "=0.62.2", features = ["Win32_Foundation", "Win32_System_Threading"] }

# Debug builds otherwise decode/encode camera MJPEG at opt-level 0, which is far
# too slow for the ~30 fps preview, the processed-view path, and the new N-frame
# temporal-smoothing decode. Compile just the hot codec crates with optimizations
# while the rest of the workspace stays debug-friendly. Profile overrides must
# live in the workspace-root manifest (this file). Crate names verified against
# Cargo.lock: mozjpeg(-sys) is nokhwa-core's MJPEG decoder; image + zune-jpeg +
# zune-core are the decode/encode path used by `image::codecs::jpeg`.
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.zune-core]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.mozjpeg]
opt-level = 3
[profile.dev.package.mozjpeg-sys]
opt-level = 3
# The real processed-view bottleneck in dev is opt-0 per-pixel math in
# slouch-vision (process_latest averaging fold, CLAHE LAB conversions), not the
# JPEG codec. It is rarely edited, so full optimization here costs a one-time
# compile hit but no ongoing incremental-build penalty.
[profile.dev.package.slouch-vision]
opt-level = 3
